POM Updates
- JDK11 instead of JDK8
- Added failsafe (skipped by default)
- Removed JDK profiles
- Removed dependency on SLF4J and LOGJ, XML-APIs
- Updated dependency: Jetty, Maven
- To be continued ...

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>